--- a/SettingsGoogle/res/values/strings.xml
+++ b/SettingsGoogle/res/values/strings.xml
@@ -3,8 +3,9 @@
     <string name="menu_key_communal" translatable="false">top_level_communal</string>
     <!-- Settings intelligence package name -->
     <string name="config_settingsintelligence_package_name" translatable="false">
-        com.android.settings.intelligence
+        com.google.android.settings.intelligence
     </string>
+    <string name="config_settingsintelligence_log_action">com.google.android.settings.intelligence.contextualcards.CARD_INTERACTION_RECEIVER</string>
     <string name="aware_category_display" />
     <string name="aware_category_gesture" />
     <string name="aware_display_settings_title">Idle lock screen</string>
@@ -51,7 +52,7 @@ Revoking access will require the app to request your permission to collect and u
     <string name="app_and_notification_dashboard_summary">Assistant, recent apps, default apps</string>
     <string name="automatic_storage_manager_activation_warning">"When you're connected, you can still access photos and videos at the quality you selected for backup"</string>
     <string name="automatic_storage_manager_days_title">Remove backed up photos &amp; videos</string>
-    <string name="automatic_storage_manager_deactivation_warning">"Turn off Smart Storage? 
+    <string name="automatic_storage_manager_deactivation_warning">"Turn off Smart Storage?
 
 Smart Storage won't free up space when your storage is almost full."</string>
     <string name="automatic_storage_manager_downloads_days_title">Backed up downloads</string>
@@ -209,9 +210,14 @@ Clear Calling works on Wi‑Fi calling and most networks, not available for 3G n
     <string name="config_emergency_intent_action">com.google.android.safetyhub.SAFETY_HUB</string>
     <string name="config_emergency_package_name">com.google.android.apps.safetyhub</string>
     <string name="config_face_enroll">com.android.settings/com.google.android.settings.biometrics.face.FaceEnrollTrampoline</string>
-    <string name="config_face_enroll_traffic_light_package" />
+    <string name="config_face_enroll_traffic_light_package">com.google.android.settings.future.biometrics.faceenroll</string>
     <string name="config_limited_warranty_overlay_package_name" />
     <string name="config_featureFactory">com.google.android.settings.overlay.FeatureFactoryImpl</string>
+    <string name="config_styles_and_wallpaper_picker_action">android.intent.action.SET_WALLPAPER</string>
+    <string name="config_styles_and_wallpaper_picker_class">com.android.customization.picker.CustomizationPickerActivity</string>
+    <string name="config_wallpaper_picker_action">android.intent.action.MAIN</string>
+    <string name="config_wallpaper_picker_class">com.google.android.apps.wallpaper.picker.CategoryPickerActivity</string>
+    <string name="config_wallpaper_picker_package">com.google.android.apps.wallpaper</string>
     <string name="discover_tips_button">Discover tips</string>
     <string name="debugging_data_title">Debugging data</string>
     <string name="connectivity_helper_call_quality_category">Call quality</string>
