SettingsGoogle: Define some package names

--- a/SettingsGoogle/res/values/strings.xml
+++ b/SettingsGoogle/res/values/strings.xml
@@ -209,6 +209,7 @@ Clear Calling works on Wi‑Fi calling and most networks, not available for 3G n
     <string name="communal_what_to_use">What to use</string>
     <string name="config_account_intent_uri">intent:#Intent;action=com.android.settings.action.VIEW_ACCOUNT;category=android.intent.category.DEFAULT;launchFlags=0x8000;S.extra.callingPackageName=com.android.settings;end</string>
     <string name="config_alternative_advanced_security_category_key">com.google.android.settings.category.ia.advanced_security</string>
+    <string name="config_avatar_picker_package">com.google.android.avatarpicker</string>
     <string name="config_battery_prediction_authority">com.google.android.apps.turbo.bluetooth.estimated_time_remaining</string>
     <string name="config_bluetooth_device_settings_uri">content://com.google.android.apps.wearables.maestro.companion/settings_slice?addr=%1$s</string>
     <string name="config_bt_slice_extra_intent">com.google.android.gms.nearby.discovery.EXTRA_INTENT</string>
@@ -216,6 +217,7 @@ Clear Calling works on Wi‑Fi calling and most networks, not available for 3G n
     <string name="config_bt_slice_intent_action">com.google.android.gms.nearby.discovery.ACTION_LOG_SLICE_AND_LAUNCH_INTENT</string>
     <string name="config_bt_slice_pending_intent_action">com.google.android.gms.nearby.discovery.ACTION_LOG_SLICE_AND_SEND_PENDING_INTENT</string>
     <!--string name="config_cell_broadcast_receiver_package">com.google.android.cellbroadcastreceiver</string-->
+    <string name="config_contacts_package_name">com.google.android.contacts</string>
     <string name="config_contextual_card_feedback_email">contextual-settings-homepage-feedback@google.com</string>
     <string name="config_deletion_helper_package">com.google.android.storagemanager</string>
     <string name="config_emergency_intent_action">com.google.android.safetyhub.SAFETY_HUB</string>
@@ -224,6 +226,7 @@ Clear Calling works on Wi‑Fi calling and most networks, not available for 3G n
     <string name="config_face_enroll_traffic_light_package">com.google.android.settings.future.biometrics.faceenroll</string>
     <string name="config_limited_warranty_overlay_package_name" />
     <string name="config_featureFactory">com.google.android.settings.overlay.FeatureFactoryImpl</string>
+    <string name="config_sound_picker_package_name">com.google.android.soundpicker</string>
     <string name="config_styles_and_wallpaper_picker_action">android.intent.action.SET_WALLPAPER</string>
     <string name="config_styles_and_wallpaper_picker_class">com.android.customization.picker.CustomizationPickerActivity</string>
     <string name="config_wallpaper_picker_action">android.intent.action.MAIN</string>
